{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 21,
  "lineage": "cb0b0a0b-6869-c18a-fb09-4878fe525508",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f34c5ae932e6f0e4",
            "arn": "arn:aws:ec2:us-east-1:586794472181:instance/i-025c63662aff79c80",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-025c63662aff79c80",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0023f0f874de0a78a",
            "private_dns": "ip-10-0-2-57.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-017e2f58dd8366685",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06903045f08d49d94",
            "tags": {
              "Name": "private-instance"
            },
            "tags_all": {
              "Name": "private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-070c1f08c6844391d"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.private_sg",
            "module.security_group.aws_security_group.public_sg",
            "module.subnet.aws_subnet.private",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f34c5ae932e6f0e4",
            "arn": "arn:aws:ec2:us-east-1:586794472181:instance/i-012a2549017e33454",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012a2549017e33454",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-077c0277723432f5d",
            "private_dns": "ip-10-0-1-96.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.96",
            "public_dns": "ec2-54-227-28-0.compute-1.amazonaws.com",
            "public_ip": "54.227.28.0",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07d6f8d15dc362829",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-094f7a5451f07e72c",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-069072001b08544a9"
            ]
          },
          "dependencies": [
            "module.security_group.aws_security_group.public_sg",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794472181:internet-gateway/igw-027ae1fdec106c560",
            "id": "igw-027ae1fdec106c560",
            "owner_id": "586794472181",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0f698f2a4a3e8d86b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9d3f1948fcb730a",
            "arn": "arn:aws:ec2:us-east-1:586794472181:elastic-ip/eipalloc-0b9d3f1948fcb730a",
            "domain": "vpc",
            "id": "eipalloc-0b9d3f1948fcb730a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-205-11-73.compute-1.amazonaws.com",
            "public_ip": "52.205.11.73",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b9d3f1948fcb730a",
            "association_id": "eipassoc-0e4119e1851d23edf",
            "connectivity_type": "public",
            "id": "nat-0b83e819a6f717bc6",
            "network_interface_id": "eni-0d011c35e25cbfbef",
            "private_ip": "10.0.1.202",
            "public_ip": "52.205.11.73",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-094f7a5451f07e72c",
            "tags": {
              "Name": "nat-gateway"
            },
            "tags_all": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794472181:route-table/rtb-0ac7f726fb1e4a91a",
            "id": "rtb-0ac7f726fb1e4a91a",
            "owner_id": "586794472181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b83e819a6f717bc6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f698f2a4a3e8d86b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794472181:route-table/rtb-08e8593e3d9c41172",
            "id": "rtb-08e8593e3d9c41172",
            "owner_id": "586794472181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-027ae1fdec106c560",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route Table"
            },
            "tags_all": {
              "Name": "Public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f698f2a4a3e8d86b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef22a9d409da77e9",
            "route_table_id": "rtb-0ac7f726fb1e4a91a",
            "subnet_id": "subnet-06903045f08d49d94"
          },
          "dependencies": [
            "module.nat_gateway.aws_eip.this",
            "module.nat_gateway.aws_nat_gateway.this",
            "module.route_table.aws_route_table.private",
            "module.subnet.aws_subnet.private",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0531ba6924b1e6405",
            "route_table_id": "rtb-08e8593e3d9c41172",
            "subnet_id": "subnet-094f7a5451f07e72c"
          },
          "dependencies": [
            "module.internet_gateway.aws_internet_gateway.this",
            "module.route_table.aws_route_table.public",
            "module.subnet.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794472181:security-group/sg-070c1f08c6844391d",
            "description": "Allow SSH from public instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070c1f08c6844391d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069072001b08544a9"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-ec2-sg",
            "name_prefix": "",
            "owner_id": "586794472181",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f698f2a4a3e8d86b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security_group.aws_security_group.public_sg",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794472181:security-group/sg-069072001b08544a9",
            "description": "Allow SSH inbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069072001b08544a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-ec2-sg",
            "name_prefix": "",
            "owner_id": "586794472181",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f698f2a4a3e8d86b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794472181:subnet/subnet-06903045f08d49d94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06903045f08d49d94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "586794472181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0f698f2a4a3e8d86b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794472181:subnet/subnet-094f7a5451f07e72c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-094f7a5451f07e72c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "586794472181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0f698f2a4a3e8d86b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:586794472181:vpc/vpc-0f698f2a4a3e8d86b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09deee2ba03247ec9",
            "default_route_table_id": "rtb-0684e4d84d1f379f7",
            "default_security_group_id": "sg-0f2672bb45c66a16c",
            "dhcp_options_id": "dopt-07626a3b4b7b9a792",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f698f2a4a3e8d86b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0684e4d84d1f379f7",
            "owner_id": "586794472181",
            "tags": {
              "Name": "bai-tap-vpc"
            },
            "tags_all": {
              "Name": "bai-tap-vpc"
            }
          }
        }
      ]
    }
  ]
}